--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>561</width>
-    <height>644</height>
+    <width>488</width>
+    <height>431</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -45,13 +45,13 @@
           </property>
           <widget class="QWidget" name="tab_3">
            <attribute name="title">
-            <string>Convergence</string>
+            <string>Convergence 2D</string>
            </attribute>
            <layout class="QVBoxLayout" name="verticalLayout_8">
             <item>
              <widget class="QGroupBox" name="groupBox">
               <property name="title">
-               <string>2D Region and Resolution</string>
+               <string>Region and  Resolution</string>
               </property>
               <layout class="QVBoxLayout" name="verticalLayout_4">
                <item>
@@ -293,22 +293,29 @@
             <item>
              <widget class="QGroupBox" name="groupBox_3">
               <property name="title">
-               <string>Calculate the convergency plot of the current algorithm</string>
+               <string>Calculate</string>
               </property>
               <layout class="QVBoxLayout" name="verticalLayout_7">
                <item>
+                <widget class="QProgressBar" name="progressBar">
+                 <property name="value">
+                  <number>0</number>
+                 </property>
+                </widget>
+               </item>
+               <item>
                 <layout class="QHBoxLayout" name="horizontalLayout">
                  <item>
-                  <widget class="QProgressBar" name="progressBar">
-                   <property name="value">
-                    <number>0</number>
+                  <widget class="QPushButton" name="pb_calculate_func">
+                   <property name="text">
+                    <string>Evaluate</string>
                    </property>
                   </widget>
                  </item>
                  <item>
                   <widget class="QPushButton" name="pb_calculate">
                    <property name="text">
-                    <string>Calculate</string>
+                    <string>Analyse Convergence</string>
                    </property>
                   </widget>
                  </item>
@@ -320,22 +327,22 @@
             <item>
              <widget class="QGroupBox" name="groupBox_4">
               <property name="title">
-               <string>Evaluate the function</string>
+               <string>Save settings</string>
               </property>
-              <layout class="QHBoxLayout" name="horizontalLayout_7">
+              <layout class="QVBoxLayout" name="verticalLayout_5">
                <item>
-                <layout class="QHBoxLayout" name="horizontalLayout_6">
+                <layout class="QHBoxLayout" name="horizontalLayout_2">
                  <item>
-                  <widget class="QProgressBar" name="progressBar_func">
-                   <property name="value">
-                    <number>0</number>
+                  <widget class="QPushButton" name="pb_save_conv_setting">
+                   <property name="text">
+                    <string>Save</string>
                    </property>
                   </widget>
                  </item>
                  <item>
-                  <widget class="QPushButton" name="pb_calculate_func">
+                  <widget class="QPushButton" name="pb_load_conv_setting">
                    <property name="text">
-                    <string>Calculate</string>
+                    <string>Load</string>
                    </property>
                   </widget>
                  </item>
@@ -343,72 +350,6 @@
                </item>
               </layout>
              </widget>
-            </item>
-            <item>
-             <spacer name="verticalSpacer">
-              <property name="orientation">
-               <enum>Qt::Vertical</enum>
-              </property>
-              <property name="sizeHint" stdset="0">
-               <size>
-                <width>20</width>
-                <height>40</height>
-               </size>
-              </property>
-             </spacer>
-            </item>
-            <item>
-             <layout class="QHBoxLayout" name="horizontalLayout_2">
-              <item>
-               <widget class="QPushButton" name="pb_save_conv_setting">
-                <property name="text">
-                 <string>Save</string>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <widget class="QPushButton" name="pb_load_conv_setting">
-                <property name="text">
-                 <string>Load</string>
-                </property>
-               </widget>
-              </item>
-             </layout>
-            </item>
-           </layout>
-          </widget>
-          <widget class="QWidget" name="tab_5">
-           <attribute name="title">
-            <string>2D</string>
-           </attribute>
-           <layout class="QVBoxLayout" name="verticalLayout_5">
-            <item>
-             <layout class="QVBoxLayout" name="verticalLayout_6">
-              <item>
-               <widget class="QScrollArea" name="scrollArea">
-                <property name="widgetResizable">
-                 <bool>true</bool>
-                </property>
-                <widget class="QWidget" name="scrollAreaWidgetContents">
-                 <property name="geometry">
-                  <rect>
-                   <x>0</x>
-                   <y>0</y>
-                   <width>471</width>
-                   <height>484</height>
-                  </rect>
-                 </property>
-                </widget>
-               </widget>
-              </item>
-              <item>
-               <widget class="QPushButton" name="pbSaveImage">
-                <property name="text">
-                 <string>Save Image</string>
-                </property>
-               </widget>
-              </item>
-             </layout>
             </item>
            </layout>
           </widget>
@@ -425,7 +366,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>561</width>
+     <width>488</width>
      <height>21</height>
     </rect>
    </property>
